--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
           </summary>
           <p>
             URL > enter click > browser sends request > DNS server > target
-            server > grabing files > response > retriving response by the
+            server > grabbing files > response > handling response by the
             browser
           </p>
         </details>
@@ -377,6 +377,22 @@
           <summary>Czym jest merge-request/pull-request?</summary>
           <p></p>
         </details>
+      </article>
+      <article>
+        <h2>Więcej pytań dostępe w poniższych repozytoriach:</h2>
+        <ul>
+          <li>
+            <a
+              href="https://github.com/h5bp/Front-end-Developer-Interview-Questions"
+              >https://github.com/h5bp/Front-end-Developer-Interview-Questions</a
+            >
+          </li>
+          <li>
+            <a href="https://github.com/sudheerj/reactjs-interview-questions"
+              >https://github.com/sudheerj/reactjs-interview-questions</a
+            >
+          </li>
+        </ul>
       </article>
       <article>
         <h2>Zadanie 1</h2>
